--- a/docs/README
+++ b/docs/README
@@ -57,7 +57,7 @@ details.
 
                                   TodoList
 
-- [ ] t1b init
+- [X] t1b init
 - [ ] t1b create-version <version_name>
 - [ ] t1b add
 - [ ] t1b show <id>
